// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddStaticInstances should render 1`] = `
.emotion-0 {
  text-align: left;
  font: 300 14px HelveticaNeue-Reg,Helvetica,Arial,sans-serif;
  padding-bottom: 15px;
  max-height: auto;
  overflow-y: scroll;
}

.emotion-1 {
  width: 780px;
  text-align: left;
  background-color: #fff;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  padding: 10px 10px;
}

.emotion-3 {
  font-size: 14px;
  font-weight: 600;
  color: #303030;
  line-height: 36px;
  white-space: nowrap;
}

.emotion-4 {
  float: left;
  font-size: 14px;
  font-weight: 700;
  padding-top: 12px;
  width: 20%;
}

.emotion-5 {
  position: relative;
}

.emotion-5 input {
  cursor: inherit;
}

.emotion-6 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  font-family: Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 300;
  position: relative;
  width: 250px;
}

.emotion-6 input {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: rgba(53,112,244,0.05);
  border-top: 2px solid transparent;
  border-bottom: 2px solid transparent;
  border-right: transparent;
  border-left: transparent;
  border-radius: 2px;
  box-shadow: none;
  box-sizing: border-box;
  color: #303030;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font: inherit;
  height: 36px;
  margin: 0;
  outline: none;
  padding: 0 1rem;
  text-align: left;
  width: 100%;
}

.emotion-6.animated input {
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border 0.2s ease-in-out;
}

.emotion-6 input::-webkit-input-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-6 input::-moz-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-6 input:-ms-input-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-6 input::placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-6 input.focused,
.emotion-6 input:active,
.emotion-6 input:focus {
  background: rgba(53,112,244,0.05);
  border-bottom: 2px solid #3570f4;
  color: #303030;
}

.emotion-6 input:invalid {
  background: rgba(53,112,244,0.05);
  border-bottom: 2px solid #d01111;
  color: #303030;
}

.emotion-6 .message {
  font-size: 12px;
  left: 0;
  line-height: 1.8;
  position: absolute;
  top: 2.571rem;
}

.emotion-6.error input,
.emotion-6.error input.focused,
.emotion-6.error input:active,
.emotion-6.error input:focus {
  border-bottom: 2px solid #d01111;
}

.emotion-6.error .message {
  color: #d01111;
}

.emotion-6 input {
  padding-right: 36px;
}

.emotion-6 .input-icon {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 36px;
  position: absolute;
  right: 6px;
}

.emotion-7 {
  fill: #d5d5d5;
  cursor: pointer;
  vertical-align: text-bottom;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  font-family: Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 300;
  position: relative;
  width: 100%;
}

.emotion-8 input {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: rgba(53,112,244,0.05);
  border-top: 2px solid transparent;
  border-bottom: 2px solid transparent;
  border-right: transparent;
  border-left: transparent;
  border-radius: 2px;
  box-shadow: none;
  box-sizing: border-box;
  color: #303030;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font: inherit;
  height: 36px;
  margin: 0;
  outline: none;
  padding: 0 1rem;
  text-align: left;
  width: 100%;
}

.emotion-8.animated input {
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border 0.2s ease-in-out;
}

.emotion-8 input::-webkit-input-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-8 input::-moz-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-8 input:-ms-input-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-8 input::placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-8 input.focused,
.emotion-8 input:active,
.emotion-8 input:focus {
  background: rgba(53,112,244,0.05);
  border-bottom: 2px solid #3570f4;
  color: #303030;
}

.emotion-8 input:invalid {
  background: rgba(53,112,244,0.05);
  border-bottom: 2px solid #d01111;
  color: #303030;
}

.emotion-8 .message {
  font-size: 12px;
  left: 0;
  line-height: 1.8;
  position: absolute;
  top: 2.571rem;
}

.emotion-8.error input,
.emotion-8.error input.focused,
.emotion-8.error input:active,
.emotion-8.error input:focus {
  border-bottom: 2px solid #d01111;
}

.emotion-8.error .message {
  color: #d01111;
}

.emotion-9 {
  width: 350px;
  padding: 0 12px;
}

<div
  class="emotion-0"
  data-testid="add-modal-message"
  height="auto"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    >
      <label
        class="emotion-3 denali-input-label emotion-4"
      >
        Type and value:
      </label>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="downshift-0-label"
        class="emotion-5 denali-input-dropdown"
        data-testid="input-dropdown"
        role="combobox"
      >
        <div
          class="emotion-6 denali-input"
          data-testid="input-wrapper"
        >
          <input
            aria-autocomplete="list"
            aria-labelledby="downshift-0-label"
            autocomplete="off"
            autocorrect="off"
            data-testid="input-node"
            id="downshift-0-input"
            name="resourceType"
            placeholder="Select Resourcetype"
            spellcheck="false"
            value=""
          />
          <div
            class="input-icon"
          >
            
            <svg
              class="emotion-7"
              data-testid="icon"
              height="24px"
              viewBox="0 0 1024 1024"
              width="24px"
            >
              <title>
                arrowhead-down
              </title>
              <path
                d="M512 580.267l-226.133-226.133c-7.461-8.401-18.291-13.668-30.351-13.668-13.957 0-26.267 7.055-33.558 17.793l-0.091 0.142c-5.319 7.276-8.51 16.4-8.51 26.27 0 12.199 4.876 23.259 12.785 31.338l-0.008-0.008 256 253.867c7.434 8.083 18.061 13.13 29.867 13.13s22.432-5.047 29.84-13.101l0.026-0.029 256-253.867c7.901-8.071 12.777-19.131 12.777-31.33 0-9.87-3.192-18.994-8.599-26.397l0.088 0.127c-7.382-10.88-19.691-17.934-33.649-17.934-12.060 0-22.89 5.267-30.315 13.626l-0.036 0.042z"
              />
            </svg>
          </div>
          <div
            class="message"
            data-testid="message"
          />
        </div>
      </div>
      <div
        class="emotion-8 denali-input emotion-9"
        data-testid="input-wrapper"
      >
        <input
          autocomplete="off"
          data-testid="input-node"
          placeholder="Enter value"
          value=""
        />
        <div
          class="message"
          data-testid="message"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AddStaticInstances should render fail to submit add-segmentation: ResourceType is required 1`] = `
.emotion-0 {
  text-align: left;
  font: 300 14px HelveticaNeue-Reg,Helvetica,Arial,sans-serif;
  padding-bottom: 15px;
  max-height: auto;
  overflow-y: scroll;
}

.emotion-1 {
  width: 780px;
  text-align: left;
  background-color: #fff;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  padding: 10px 10px;
}

.emotion-3 {
  font-size: 14px;
  font-weight: 600;
  color: #303030;
  line-height: 36px;
  white-space: nowrap;
}

.emotion-4 {
  float: left;
  font-size: 14px;
  font-weight: 700;
  padding-top: 12px;
  width: 20%;
}

.emotion-5 {
  position: relative;
}

.emotion-5 input {
  cursor: inherit;
}

.emotion-6 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  font-family: Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 300;
  position: relative;
  width: 250px;
}

.emotion-6 input {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: rgba(53,112,244,0.05);
  border-top: 2px solid transparent;
  border-bottom: 2px solid transparent;
  border-right: transparent;
  border-left: transparent;
  border-radius: 2px;
  box-shadow: none;
  box-sizing: border-box;
  color: #303030;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font: inherit;
  height: 36px;
  margin: 0;
  outline: none;
  padding: 0 1rem;
  text-align: left;
  width: 100%;
}

.emotion-6.animated input {
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border 0.2s ease-in-out;
}

.emotion-6 input::-webkit-input-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-6 input::-moz-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-6 input:-ms-input-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-6 input::placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-6 input.focused,
.emotion-6 input:active,
.emotion-6 input:focus {
  background: rgba(53,112,244,0.05);
  border-bottom: 2px solid #3570f4;
  color: #303030;
}

.emotion-6 input:invalid {
  background: rgba(53,112,244,0.05);
  border-bottom: 2px solid #d01111;
  color: #303030;
}

.emotion-6 .message {
  font-size: 12px;
  left: 0;
  line-height: 1.8;
  position: absolute;
  top: 2.571rem;
}

.emotion-6.error input,
.emotion-6.error input.focused,
.emotion-6.error input:active,
.emotion-6.error input:focus {
  border-bottom: 2px solid #d01111;
}

.emotion-6.error .message {
  color: #d01111;
}

.emotion-6 input {
  padding-right: 36px;
}

.emotion-6 .input-icon {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 36px;
  position: absolute;
  right: 6px;
}

.emotion-7 {
  fill: #d5d5d5;
  cursor: pointer;
  vertical-align: text-bottom;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  font-family: Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 300;
  position: relative;
  width: 100%;
}

.emotion-8 input {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: rgba(53,112,244,0.05);
  border-top: 2px solid transparent;
  border-bottom: 2px solid transparent;
  border-right: transparent;
  border-left: transparent;
  border-radius: 2px;
  box-shadow: none;
  box-sizing: border-box;
  color: #303030;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font: inherit;
  height: 36px;
  margin: 0;
  outline: none;
  padding: 0 1rem;
  text-align: left;
  width: 100%;
}

.emotion-8.animated input {
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border 0.2s ease-in-out;
}

.emotion-8 input::-webkit-input-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-8 input::-moz-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-8 input:-ms-input-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-8 input::placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-8 input.focused,
.emotion-8 input:active,
.emotion-8 input:focus {
  background: rgba(53,112,244,0.05);
  border-bottom: 2px solid #3570f4;
  color: #303030;
}

.emotion-8 input:invalid {
  background: rgba(53,112,244,0.05);
  border-bottom: 2px solid #d01111;
  color: #303030;
}

.emotion-8 .message {
  font-size: 12px;
  left: 0;
  line-height: 1.8;
  position: absolute;
  top: 2.571rem;
}

.emotion-8.error input,
.emotion-8.error input.focused,
.emotion-8.error input:active,
.emotion-8.error input:focus {
  border-bottom: 2px solid #d01111;
}

.emotion-8.error .message {
  color: #d01111;
}

.emotion-9 {
  width: 350px;
  padding: 0 12px;
}

<div
  class="emotion-0"
  data-testid="add-modal-message"
  height="auto"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    >
      <label
        class="emotion-3 denali-input-label emotion-4"
      >
        Type and value:
      </label>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="downshift-1-label"
        class="emotion-5 denali-input-dropdown"
        data-testid="input-dropdown"
        role="combobox"
      >
        <div
          class="emotion-6 denali-input"
          data-testid="input-wrapper"
        >
          <input
            aria-autocomplete="list"
            aria-labelledby="downshift-1-label"
            autocomplete="off"
            autocorrect="off"
            data-testid="input-node"
            id="downshift-1-input"
            name="resourceType"
            placeholder="Select Resourcetype"
            spellcheck="false"
            value=""
          />
          <div
            class="input-icon"
          >
            
            <svg
              class="emotion-7"
              data-testid="icon"
              height="24px"
              viewBox="0 0 1024 1024"
              width="24px"
            >
              <title>
                arrowhead-down
              </title>
              <path
                d="M512 580.267l-226.133-226.133c-7.461-8.401-18.291-13.668-30.351-13.668-13.957 0-26.267 7.055-33.558 17.793l-0.091 0.142c-5.319 7.276-8.51 16.4-8.51 26.27 0 12.199 4.876 23.259 12.785 31.338l-0.008-0.008 256 253.867c7.434 8.083 18.061 13.13 29.867 13.13s22.432-5.047 29.84-13.101l0.026-0.029 256-253.867c7.901-8.071 12.777-19.131 12.777-31.33 0-9.87-3.192-18.994-8.599-26.397l0.088 0.127c-7.382-10.88-19.691-17.934-33.649-17.934-12.060 0-22.89 5.267-30.315 13.626l-0.036 0.042z"
              />
            </svg>
          </div>
          <div
            class="message"
            data-testid="message"
          />
        </div>
      </div>
      <div
        class="emotion-8 denali-input emotion-9"
        data-testid="input-wrapper"
      >
        <input
          autocomplete="off"
          data-testid="input-node"
          placeholder="Enter value"
          value=""
        />
        <div
          class="message"
          data-testid="message"
        />
      </div>
    </div>
  </div>
</div>
`;
